--- a/LECTURE15.html
+++ b/LECTURE15.html
@@ -12,22 +12,30 @@
 <meta name="author" content="NRES 470/670" />
 
 
-<title>Parameter estimation!</title>
+<title>Parameter estimation</title>
 
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -39,11 +47,6 @@
     </style>
 
 <style type="text/css">code{white-space: pre;}</style>
-<style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -56,32 +59,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 
 
@@ -91,10 +69,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -111,40 +85,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 52px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h2 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h3 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h4 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h5 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h6 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -172,7 +119,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -184,7 +131,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -195,10 +142,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -210,7 +170,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -336,7 +295,7 @@ div.tocify {
 
 
 <!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="TOC" class="tocify">
 </div>
@@ -487,13 +446,13 @@ div.tocify {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
-<h1 class="title toc-ignore">Parameter estimation!</h1>
+<h1 class="title toc-ignore">Parameter estimation</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2021</h4>
+<h4 class="date">Spring 2022</h4>
 
 </div>
 
@@ -808,13 +767,8 @@ R = number of individuals in 2nd sample that are marked</p>
 # Cormack-Jolly-Seber (CJS) model in R
 ###########
 
-library(marked)      # install the &#39;marked&#39; package if you haven&#39;t already done this!</code></pre>
-<pre><code>## Warning: package &#39;marked&#39; was built under R version 3.6.3</code></pre>
-<pre><code>## Loading required package: lme4</code></pre>
-<pre><code>## Loading required package: Matrix</code></pre>
-<pre><code>## Loading required package: parallel</code></pre>
-<pre><code>## This is marked 1.2.6</code></pre>
-<pre class="r"><code>data(&quot;dipper&quot;)
+library(marked)      # install the &#39;marked&#39; package if you haven&#39;t already done this!
+data(&quot;dipper&quot;)
 head(dipper,10)</code></pre>
 <pre><code>##         ch    sex
 ## 1  0000001 Female
@@ -946,40 +900,40 @@ capture.output(suppressMessages(suppressWarnings(
 # AIC model selection
 
 allmodels</code></pre>
-<pre><code>##                             model npar      AIC  DeltaAIC       weight
-## 1                    Phi(~1)p(~1)    2 670.8377  0.000000 0.3792707172
-## 2                  Phi(~1)p(~sex)    3 672.1934  1.355756 0.1925531715
-## 5                  Phi(~sex)p(~1)    3 672.6762  1.838541 0.1512568696
-## 9                 Phi(~time)p(~1)    7 673.7301  2.892463 0.0893015564
-## 6                Phi(~sex)p(~sex)    4 674.1518  3.314151 0.0723253541
-## 10              Phi(~time)p(~sex)    8 675.1913  4.353613 0.0430104833
-## 13          Phi(~sex + time)p(~1)    8 675.6617  4.824056 0.0339952989
-## 14        Phi(~sex + time)p(~sex)    9 677.1681  6.330419 0.0160072363
-## 3                 Phi(~1)p(~time)    7 678.4804  7.642778 0.0083050299
-## 4           Phi(~1)p(~sex + time)    8 679.9497  9.112045 0.0039837661
-## 7               Phi(~sex)p(~time)    8 680.4921  9.654404 0.0030375415
-## 11             Phi(~time)p(~time)   12 681.0644 10.226756 0.0022815888
-## 12       Phi(~time)p(~sex + time)   13 681.7032 10.865580 0.0016577483
-## 8         Phi(~sex)p(~sex + time)    9 681.8896 11.051978 0.0015102292
-## 15       Phi(~sex + time)p(~time)   13 682.9670 12.129303 0.0008812611
-## 16 Phi(~sex + time)p(~sex + time)   14 683.6633 12.825655 0.0006221479
-##     neg2lnl convergence
-## 1  666.8377           0
-## 2  666.1934           0
-## 5  666.6762           0
-## 9  659.7301           0
-## 6  666.1518           0
-## 10 659.1913           0
-## 13 659.6617           0
-## 14 659.1681           0
-## 3  664.4804           0
-## 4  663.9497           0
-## 7  664.4921           0
-## 11 657.0644           0
-## 12 655.7032           0
-## 8  663.8896           0
-## 15 656.9670           0
-## 16 655.6633           1</code></pre>
+<pre><code>##                             model npar      AIC  DeltaAIC       weight  neg2lnl
+## 1                    Phi(~1)p(~1)    2 670.8377  0.000000 0.3792707172 666.8377
+## 2                  Phi(~1)p(~sex)    3 672.1934  1.355756 0.1925531715 666.1934
+## 5                  Phi(~sex)p(~1)    3 672.6762  1.838541 0.1512568696 666.6762
+## 9                 Phi(~time)p(~1)    7 673.7301  2.892463 0.0893015564 659.7301
+## 6                Phi(~sex)p(~sex)    4 674.1518  3.314151 0.0723253541 666.1518
+## 10              Phi(~time)p(~sex)    8 675.1913  4.353613 0.0430104833 659.1913
+## 13          Phi(~sex + time)p(~1)    8 675.6617  4.824056 0.0339952989 659.6617
+## 14        Phi(~sex + time)p(~sex)    9 677.1681  6.330419 0.0160072363 659.1681
+## 3                 Phi(~1)p(~time)    7 678.4804  7.642778 0.0083050299 664.4804
+## 4           Phi(~1)p(~sex + time)    8 679.9497  9.112045 0.0039837661 663.9497
+## 7               Phi(~sex)p(~time)    8 680.4921  9.654404 0.0030375415 664.4921
+## 11             Phi(~time)p(~time)   12 681.0644 10.226756 0.0022815888 657.0644
+## 12       Phi(~time)p(~sex + time)   13 681.7032 10.865580 0.0016577483 655.7032
+## 8         Phi(~sex)p(~sex + time)    9 681.8896 11.051978 0.0015102292 663.8896
+## 15       Phi(~sex + time)p(~time)   13 682.9670 12.129303 0.0008812611 656.9670
+## 16 Phi(~sex + time)p(~sex + time)   14 683.6633 12.825655 0.0006221479 655.6633
+##    convergence
+## 1            0
+## 2            0
+## 5            0
+## 9            0
+## 6            0
+## 10           0
+## 13           0
+## 14           0
+## 3            0
+## 4            0
+## 7            0
+## 11           0
+## 12           0
+## 8            0
+## 15           0
+## 16           1</code></pre>
 <pre class="r"><code>#######
 # get parameter estimates and confidence intervals for best model
 
@@ -1079,7 +1033,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
@@ -1088,6 +1042,9 @@ $(document).ready(function () {
 
 <script>
 $(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
 
     // move toc-ignore selectors from section div to header
     $('div.section.toc-ignore')
